# python-project-lvl1

./: .travis.yml  How_to.md  Makefile  README.md  pyproject.toml
brain_games/: __init__.py  cli.py  engine.py  parity.py
brain_games/games/: b_calc.py  b_even.py  b_games.py  b_gcd.py  b_prime.py  b_progression.py  calc.py  parity.py
brain_games/logic/: calc.py  cli.py  parity.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
