[tool.poetry]
name = "kmayev_brain_games"
version = "0.8.1"
description = "This Brain Games project is created as a part of education process on Hexlet portal"
authors = ["Konstantin Mayev <k.mayev@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = 'https://github.com/kmayev/python-project-lvl1'

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
